--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </nav>
     -->
     <div class="page-header header-filter" data-parallax="true"
-        style="background-image: url('assets/images/IMG_1685.JPG.jpg')">
+        style="background-image: url('assets/images/IMG_1685_light.JPG')">
         <div class="container">
             <div class="row">
                 <div class="col-md-8 ml-auto mr-auto">
