--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         <h1>Flyable Service</h1>
                         <h3 class="title text-center">produced by Team-S!PPO</h3>
                         <a href="https://www.youtube.com/watch?v=VnRiD0piabc" target="_blank"
-                            class="btn btn-danger btn-raised btn-lg">
+                            class="btn btn-danger btn-raised btn-lg" onclick="captureOutboundLink('https://www.youtube.com/watch?v=VnRiD0piabc'); return false;">
                             <i class="fa fa-play"></i> Watch video
                         </a>
                     </div>
