--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         <h1>Flyable Service</h1>
                         <h3 class="title text-center">produced by Team-S!PPO</h3>
                         <a href="https://www.youtube.com/watch?v=VnRiD0piabc" target="_blank"
-                            class="btn btn-danger btn-raised btn-lg">
+                            class="btn btn-danger btn-raised btn-lg" onClick="ga('send', 'event', 'click_link', 'click', 'youtube_flyable');">
                             <i class="fa fa-play"></i> Watch video
                         </a>
                     </div>
