--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
                     <div class="brand text-center">
                         <h1>Flyable Service</h1>
                         <h3 class="title text-center">produced by Team-S!PPO</h3>
-                        <a href="https://www.youtube.com/watch?v=VnRiD0piabc" target="_blank"
-                            class="btn btn-danger btn-raised btn-lg" onClick="ga('send', 'event', 'click_link', 'click', 'youtube_flyable');">
+                        <a href="https://www.youtube.com/watch?v=VnRiD0piabc?banner=x" target="_blank"
+                            class="btn btn-danger btn-raised btn-lg">
                             <i class="fa fa-play"></i> Watch video
                         </a>
                     </div>
