--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </nav>
     -->
     <div class="page-header header-filter" data-parallax="true"
-        style="background-image: url('assets/images/IMG_1685_light.JPG')">
+        style="background-image: url('assets/images/pv.gif')">
         <div class="container">
             <div class="row">
                 <div class="col-md-8 ml-auto mr-auto">
