--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
         </div>
     </nav>
     -->
+    
     <div class="page-header header-filter" data-parallax="true"
         style="background-image: url('assets/images/pv.gif')">
         <div class="container">
@@ -81,6 +82,8 @@
                             class="btn btn-danger btn-raised btn-lg">
                             <i class="fa fa-play"></i> Watch video
                         </a>
+                        <script src="https://apis.google.com/js/platform.js"></script>
+                        <div class="g-ytsubscribe" data-channel="korokoror" data-layout="full" data-theme="dark" data-count="default"></div>
                     </div>
                 </div>
             </div>
@@ -249,53 +252,52 @@
             </div>
 
             <div class="section section-contacts">
-                    <div class="row">
-                      <div class="col-md-8 ml-auto mr-auto">
+                <div class="row">
+                    <div class="col-md-8 ml-auto mr-auto">
                         <h2 class="text-center title">contact us</h2>
-                          <div class="row">
+                        <div class="row">
                             <div class="col-md-8 ml-auto mr-auto text-center">
-                              <h5 class="description">ご感想などありましたら、ご連絡下さい。</h5>
-                              <a href="https://forms.gle/DknXk1j6go5UsXjQA" class="btn btn-danger btn-raised">
-                                contact us
-                              </a>
+                                <h5 class="description">ご感想などありましたら、ご連絡下さい。</h5>
+                                <a href="https://forms.gle/DknXk1j6go5UsXjQA" class="btn btn-danger btn-raised">
+                                    contact us
+                                </a>
                             </div>
-                          </div>
+                        </div>
                         </form>
-                      </div>
                     </div>
-                  </div>
-                  
+                </div>
+            </div>
 
-                  <footer class="footer footer-default">
-                        <div class="container">
-                          <nav class="float-left">
+                <footer class="footer footer-default">
+                    <div class="container">
+                        <nav class="float-left">
                             <ul>
-                              <li>
-                                <a href="https://github.com/Team-SIPPO?tab=repositories">
-                                   Repository
-                                </a>
-                              </li>
-                              <li>
-                                <a href="https://www.youtube.com/user/korokoror">
-                                    Movie
-                                </a>
-                              </li>
-                              <li>
-                                <a href="https://note.mu/team_sippo/m/m8700090081c2">
-                                  Blog
-                                </a>
-                              </li>
+                                <li>
+                                    <a href="https://github.com/Team-SIPPO?tab=repositories">
+                                        Repository
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://www.youtube.com/user/korokoror">
+                                        Movie
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://note.mu/team_sippo/m/m8700090081c2">
+                                        Blog
+                                    </a>
+                                </li>
                             </ul>
-                          </nav>
-                          <div class="copyright float-right">
+                        </nav>
+                        <div class="copyright float-right">
                             &copy;
                             <script>
-                              document.write(new Date().getFullYear())
+                                document.write(new Date().getFullYear())
                             </script>, made with <i class="material-icons">favorite</i> by
                             <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a> for a better web.
-                          </div>
                         </div>
-                      </footer>
+                    </div>
+                </footer>
 
 </body>
 
