--- a/index.html
+++ b/index.html
@@ -78,8 +78,9 @@
                     <div class="brand text-center">
                         <h1>Flyable Service</h1>
                         <h3 class="title text-center">produced by Team-S!PPO</h3>
-                        <a href="https://www.youtube.com/watch?v=VnRiD0piabc?banner=x" target="_blank"
-                            class="btn btn-danger btn-raised btn-lg">
+                        <!--a href="https://www.youtube.com/watch?v=VnRiD0piabc?banner=x" target="_blank"
+                            class="btn btn-danger btn-raised btn-lg"-->
+                            <a onclick="ga('send', 'event', 'click_link', 'click', 'youtube_flyable');" href="https://www.youtube.com/watch?v=VnRiD0piabc" target="_blank" class="btn btn-danger btn-raised btn-lg">
                             <i class="fa fa-play"></i> Watch video
                         </a>
                         <script src="https://apis.google.com/js/platform.js"></script>
