--- a/index.html
+++ b/index.html
@@ -84,8 +84,10 @@
                         <!--a href="https://www.youtube.com/watch?v=VnRiD0piabc?banner=x" target="_blank"
                             class="btn btn-danger btn-raised btn-lg"-->
                     </div>
-                    <script src="https://apis.google.com/js/platform.js"></script>
-                    <div class="g-ytsubscribe text-center" data-channel="korokoror" data-layout="full" data-theme="dark" data-count="default"></div>
+                    <div class="brand text-center">
+                        <script src="https://apis.google.com/js/platform.js"></script>
+                        <div class="g-ytsubscribe" data-channel="korokoror" data-layout="full" data-theme="dark" data-count="default"></div>
+                    </div>
                 </div>
             </div>
         </div>
