--- a/index.html
+++ b/index.html
@@ -86,7 +86,13 @@
                     </div>
                     <div class="brand text-center">
                         <script src="https://apis.google.com/js/platform.js"></script>
-                        <div class="g-ytsubscribe" data-channel="korokoror" data-layout="full" data-theme="dark" data-count="default"></div>
+                        <div class="col-md-4 ml-auto mr-auto">
+                            <div class="g-ytsubscribe" data-channel="korokoror" data-layout="full" data-theme="dark" data-count="default"></div>
+                        </div>
+                        <div class="col-md-4 ml-auto mr-auto">
+                        <img src="./assets/images/note_logo/White/png/logo_White.png" alt="Thumbnail Image"
+                            class="img-raised img-fluid">
+                        </div>
                     </div>
                 </div>
             </div>
