--- a/index.html
+++ b/index.html
@@ -90,9 +90,8 @@
                             <div class="g-ytsubscribe" data-channel="korokoror" data-layout="full" data-theme="dark" data-count="default"></div>
                         </div>
                         <div class="col-md-2 ml-auto mr-auto">
-                            <a href="https://note.com/team_sippo/m/m8700090081c2">
-                                <img src="./assets/images/note_logo/White/png/logo_White.png" alt="Thumbnail Image"
-                                class="img-raised">
+                            <a href="https://note.com/team_sippo/m/m8700090081c2" target="_blank">
+                                <img src="./assets/images/note_logo/White/png/logo_White.png" alt="Thumbnail Image" class="img-fluid">
                             </a>
                         </div>
                     </div>
