--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
                     </div>
                     <div class="brand text-center">
                         <script src="https://apis.google.com/js/platform.js"></script>
-                        <div class="col-md-4 ml-auto mr-auto">
+                        <div class="col-md-6">
                             <div class="g-ytsubscribe" data-channel="korokoror" data-layout="full" data-theme="dark" data-count="default"></div>
                         </div>
-                        <div class="col-md-4 ml-auto mr-auto">
+                        <div class="col-md-6">
                             <a href="https://note.com/team_sippo/m/m8700090081c2" target="_blank">
                                 <img src="./assets/images/note_logo/White/png/logo_White.png" alt="Thumbnail Image" class="img-fluid">
                             </a>
