--- a/index.html
+++ b/index.html
@@ -84,24 +84,28 @@
                         <!--a href="https://www.youtube.com/watch?v=VnRiD0piabc?banner=x" target="_blank"
                             class="btn btn-danger btn-raised btn-lg"-->
                     </div>
-                    <script src="https://apis.google.com/js/platform.js"></script>
-                    <div class="col-md-4">
-                        <div class="card card-plain">
-                                <div class="col-md-6 ml-auto mr-auto">
-                                    <div class="g-ytsubscribe" data-channel="korokoror" data-layout="full" data-theme="dark" data-count="default"></div>
-                                </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="card card-plain">
-                            <div class="col-md-6 ml-auto mr-auto">
-                                <a href="https://note.com/team_sippo/m/m8700090081c2" target="_blank">
-                                    <img src="./assets/images/note_logo/White/png/logo_White.png" alt="Thumbnail Image" class="img-fluid">
-                                </a>
+                </div>    
+            </div>
+            <div class="row">
+                <script src="https://apis.google.com/js/platform.js"></script>
+                <div class="col-md-4">
+                    <div class="card card-plain">
+                            <div class="col-md-4 ml-auto mr-auto">
+                                <div class="g-ytsubscribe" data-channel="korokoror" data-layout="full" data-theme="dark" data-count="default"></div>
                             </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="card card-plain">
+                        <div class="col-md-4 ml-auto mr-auto">
+                            <a href="https://note.com/team_sippo/m/m8700090081c2" target="_blank">
+                                <img src="./assets/images/note_logo/White/png/logo_White.png" alt="Thumbnail Image" class="img-fluid">
+                            </a>
                         </div>
                     </div>
                 </div>
+        
             </div>
         </div>
     </div>
