--- a/index.html
+++ b/index.html
@@ -90,9 +90,7 @@
                 <script src="https://apis.google.com/js/platform.js"></script>
                 <div class="col-md-6">
                     <div class="card card-plain">
-                        <div class="col-md-6 ml-auto mr-auto">
-                            <div class="g-ytsubscribe" data-channel="korokoror" data-layout="full" data-theme="dark" data-count="default"></div>
-                        </div>
+                        <div class="g-ytsubscribe col-md-6 ml-auto mr-auto" data-channel="korokoror" data-layout="full" data-theme="dark" data-count="default"></div>
                     </div>
                 </div>
 
