--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
                 </div>    
             </div>
             <div class="row">
-                    <div class="col-md-6 ml-auto mr-auto">
+                    <div class="col-md-4 ml-auto mr-auto">
                         <script src="https://apis.google.com/js/platform.js"></script>
-                        <div class="g-ytsubscribe" data-channel="korokoror" data-layout="full" data-theme="dark" data-count="default"></div>
+                        <div class="g-ytsubscribe ml-auto mr-auto" data-channel="korokoror" data-layout="full" data-theme="dark" data-count="default"></div>
 
                         <a href="https://note.com/team_sippo/m/m8700090081c2" target="_blank">
                             <img src="./assets/images/note_logo/White/png/logo_White.png" alt="Thumbnail Image" class="img-fluid">
