--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
             </div>
             <div class="row">
                 <div class="brand text-center">
-                    <script src="https://apis.google.com/js/platform.js"></script>
                     <div class="col-md-3 ml-auto mr-auto">
-                        <div class="g-ytsubscribe" data-channel="korokoror" data-layout="full" data-theme="dark" data-count="default"></div>
+                        <script src="https://apis.google.com/js/platform.js"></script>
+                        <div class="g-ytsubscribe ml-auto mr-auto" data-channel="korokoror" data-layout="full" data-theme="dark" data-count="default"></div>
                     </div>
                     <div class="col-md-3 ml-auto mr-auto">
                         <a href="https://note.com/team_sippo/m/m8700090081c2" target="_blank">
