--- a/index.html
+++ b/index.html
@@ -87,15 +87,11 @@
                 </div>    
             </div>
             <div class="row">
-                <div class="col-md-4 ml-auto mr-auto">
-                    <script src="https://apis.google.com/js/platform.js"></script>
-                    <div class="g-ytsubscribe col-md-4 ml-auto mr-auto" data-channel="korokoror" data-layout="full" data-theme="dark" data-count="default"></div>
-                </div>
-            </div>
-            <div class="row">
                 <div class="col-md-2 ml-auto mr-auto">
-                    <a href="https://note.com/team_sippo/m/m8700090081c2" target="_blank" class="col-md-2">
-                        <img src="./assets/images/note_logo/White/png/logo_White.png" alt="Thumbnail Image" class="img-fluid">
+                    <a href="https://note.com/team_sippo/m/m8700090081c2" target="_blank">
+                        <script src="https://apis.google.com/js/platform.js"></script>
+                        <div class="g-ytsubscribe center-block" data-channel="korokoror" data-layout="full" data-theme="dark" data-count="default"></div>    
+                        <img src="./assets/images/note_logo/White/png/logo_White.png" alt="Thumbnail Image" class="img-fluid center-block">
                     </a>
                 </div>
             </div>
