--- a/index.html
+++ b/index.html
@@ -60,61 +60,33 @@
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav ml-auto">
-                    <li class="dropdown nav-item">
-                        <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
-                            <i class="material-icons">apps</i> Components
-                        </a>
-    
-                        <div class="dropdown-menu dropdown-with-icons">
-                            <a href="../index.html" class="dropdown-item">
-                                <i class="material-icons">layers</i> All Components
-                            </a>
-                            <a href="https://demos.creative-tim.com/material-kit/docs/2.1/getting-started/introduction.html"
-                                class="dropdown-item">
-                                <i class="material-icons">content_paste</i> Documentation
-                            </a>
-                        </div>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="javascript:void(0)" onclick="scrollToDownload()">
-                            <i class="material-icons">cloud_download</i> Download
-                        </a>
-                    </li>
                     <li class="nav-item">
                         <a class="nav-link" rel="tooltip" title="" data-placement="bottom"
                             href="https://note.com/team_sippo/m/m8700090081c2" target="_blank"
-                            data-original-title="活動日誌！">
+                            data-original-title="S!PPO活動日誌！">
                             <i class="fa fa-sticky-note"></i> note
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" rel="tooltip" title="" data-placement="bottom"
-                            href="https://note.com/team_sippo/m/m8700090081c2" target="_blank"
-                            data-original-title="Youtube">
-                            <i class="fa fa-sticky-note"></i> note
+                            href="https://www.youtube.com/user/korokoror target="_blank"
+                            data-original-title="S!PPO動画CH">
+                            <i class="fa fa-play"></i> movie
                         </a>
                     </li>
     
                     <li class="nav-item">
-                        <script src="https://apis.google.com/js/platform.js"></script>
-                        <div class="g-ytsubscribe nav-link" data-channel="korokoror" 
-                        data-layout="full" data-theme="dark" data-count="default"
-                        rel="tooltip" title="" data-placement="bottom"
-                            href="https://twitter.com/CreativeTim" target="_blank"
-                            data-original-title="Follow us on Twitter"></div>    
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" rel="tooltip" title="" data-placement="bottom"
-                            href="https://www.facebook.com/CreativeTim" target="_blank"
-                            data-original-title="Like us on Facebook">
-                            <i class="fa fa-facebook-square"></i>
+                            href="https://github.com/Team-SIPPO/" target="_blank"
+                            data-original-title="S!PPOプログラム on Github">
+                            <i class="fa fa-code"></i> code
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" rel="tooltip" title="" data-placement="bottom"
-                            href="https://www.instagram.com/CreativeTimOfficial" target="_blank"
+                            href="https://www.instagram.com/team.sippo/" target="_blank"
                             data-original-title="Follow us on Instagram">
-                            <i class="fa fa-instagram"></i>
+                            <i class="fa fa-instagram"></i> pict
                         </a>
                     </li>
                 </ul>
@@ -137,6 +109,13 @@
                             class="btn btn-danger btn-raised btn-lg"-->
                     </div>
                 </div>    
+            </div>
+            <div class="row">
+                <div class="col-md-2 ml-auto mr-auto">
+                    <script src="https://apis.google.com/js/platform.js"></script>
+                    <div class="g-ytsubscribe center-block" data-channel="korokoror" data-layout="full" data-theme="dark" data-count="default"></div>    
+
+                </div>
             </div>
         </div>
     </div>
