--- a/index.html
+++ b/index.html
@@ -48,8 +48,29 @@
         id="sectionsNav">
         <div class="container">
             <div class="navbar-translate">
-                <a class="navbar-brand" href="https://team-sippo.github.io/">
-                    S!PPO </a>
+                
+                <a class="navbar-brand" rel="tooltip" title="" data-placement="bottom"
+                    href="https://note.com/team_sippo/m/m8700090081c2" target="_blank"
+                    data-original-title="S!PPO活動日誌！">
+                    <i class="fa fa-sticky-note"></i> note
+                </a>
+                <a class="navbar-brand" rel="tooltip" title="" data-placement="bottom"
+                    href="https://www.youtube.com/user/korokoror target="_blank"
+                    data-original-title="S!PPO動画CH">
+                    <i class="fa fa-play"></i> movie
+                </a>
+
+                <a class="navbar-brand" rel="tooltip" title="" data-placement="bottom"
+                    href="https://github.com/Team-SIPPO/" target="_blank"
+                    data-original-title="S!PPOプログラム on Github">
+                    <i class="fa fa-code"></i> code
+                </a>
+                <a class="navbar-brand" rel="tooltip" title="" data-placement="bottom"
+                    href="https://www.instagram.com/team.sippo/" target="_blank"
+                    data-original-title="Follow us on Instagram">
+                    <i class="fa fa-instagram"></i> pict
+                </a>
+                <!--
                 <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false"
                     aria-label="Toggle navigation">
                     <span class="sr-only">Toggle navigation</span>
@@ -57,7 +78,9 @@
                     <span class="navbar-toggler-icon"></span>
                     <span class="navbar-toggler-icon"></span>
                 </button>
+                -->
             </div>
+            <!--
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
@@ -91,6 +114,7 @@
                     </li>
                 </ul>
             </div>
+            -->
         </div>
     </nav>
 
