--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <i class="fa fa-sticky-note"></i> note
                 </a>
                 <a class="navbar-brand" rel="tooltip" title="" data-placement="bottom"
-                    href="https://www.youtube.com/user/korokoror target="_blank"
+                    href="https://www.youtube.com/user/korokoror" target="_blank"
                     data-original-title="S!PPO動画CH">
                     <i class="fa fa-play"></i> movie
                 </a>
@@ -150,13 +150,19 @@
     <div class="main main-raised">
         <div class="container">
             <div class="section text-center">
-                <h2 class="title">Concepts</h2>
+                <h2 class="title">About Us</h2>
                 <div class="row">
                     <div class="col-md-8 ml-auto mr-auto">
-                        <h5 class="description">Team-S!PPOは
-                                「Technologies for your smile-技術であなたを笑顔に-」
-                                をキーワードに集まった技術者チームです。<br>
-                                空間、自転車、農業、音楽、芸術の分野で笑顔を生む技術を開発しています。</h5>
+                        <h5 class="description">
+                            笑顔のために技術を創りたい、私たちはそんな想いで集った技術者・研究者のチームです。<br><br>
+                            効率や便利を追い求めるのではなく、人が現実を密度濃く感じて暮らすことができるような技術、
+                            そんな技術を創っていきます。<br><br>
+
+                            空間、自転車、農業、音楽、芸術の分野を混合し、笑顔を生む技術を開発していきます。<br>
+                            Flyable Serviceは想いを具現化する最初の柱です。<br><br>
+
+                            「Technologies for your smile-技術であなたを笑顔に-」<br>
+                        </h5>
                     </div>
                 </div>
     
@@ -176,7 +182,8 @@
                             </div>
                             <h4 class="card-title">cheeeez<br>(フライアブル プロトタイプ)</h4>
                             <div class="card-body">
-                                <p class="card-description">カメラアプリです。誰でも良い写真を取れます。</p>
+                                <p class="card-description">Flyable Serviceの中核の技術を組み入れたカメラアプリのプロトタイプです。
+                                    誰でも良い写真を取れます。</p>
                             </div>
                             <div class="col-md-6 ml-auto mr-auto">
                                 <button class="btn btn-danger">comming soon</button>
