--- a/index.html
+++ b/index.html
@@ -134,12 +134,12 @@
                     </div>
                 </div>    
             </div>
-            <div class="row">
+            <!--div class="row">
                 <div class="col-md-2 ml-auto mr-auto">
                     <script src="https://apis.google.com/js/platform.js"></script>
                     <div class="g-ytsubscribe center-block" data-channel="korokoror" data-layout="full" data-theme="dark" data-count="default"></div>    
 
-                </div>
+                </div-->
             </div>
         </div>
     </div>
@@ -297,7 +297,7 @@
                                     <div class="card-footer justify-content-center">
                                         <a href="https://twitter.com/MTRunners" class="btn btn-link btn-just-icon"><i
                                                 class="fa fa-twitter"></i></a>
-                                                <a href="https://www.instagram.com/team.sippo/" class="btn btn-link btn-just-icon"><i class="fa fa-instagram"></i></a>
+                                                <!--a href="https://www.instagram.com/team.sippo/" class="btn btn-link btn-just-icon"><i class="fa fa-instagram"></i></a-->
                                     </div>
                                 </div>
                             </div>
