--- a/index.html
+++ b/index.html
@@ -261,7 +261,9 @@
                                         <small class="card-description text-muted">Service Design Architect</small>
                                     </h4>
                                     <div class="card-body">
-                                        <p class="card-description">コア技術開発、アプリケーション実装</p>
+                                        <p class="card-description">コア技術開発、アプリケーション実装<br>
+                                            広島生まれ大阪育ち．高校時代にものづくりの楽しさを知りロボコンやロボカップなどの競技会にのめり込む．大学院でロボットの知能化の研究に従事，IEEE主催の国際会議での受賞歴等あり．博士（工学）．学術振興会特別研究員を経て，現在IT企業の研究所で勤務．直近の2年間は研究開発したヘルステックの欧州での事業化に挑戦．Team-S!PPOでは，全力で楽しみながら，新しいことにチャレンジ！
+                                        </p>
                                     </div>
                                     <div class="card-footer justify-content-center">
                                         <a href="https://twitter.com/sippo_bb" class="btn btn-link btn-just-icon"><i
@@ -283,7 +285,7 @@
                                         <small class="card-description text-muted">Business Developerent Director</small>
                                     </h4>
                                     <div class="card-body">
-                                        <p class="card-description">メカ技術開発、ビジネスモデル策定</p>
+                                        <p class="card-description">メカ技術開発、ビジネスモデル策定<br>生まれ(東京)→育ち(名古屋)→大学(東京)→就職(名古屋)と、東京と名古屋を行ったり来たり。父方の実家が農家ということもあってか家庭菜園を愛する幼少期を過ごしました。大学ではエコカーを目指した燃焼計測の研究に従事し、米国留学、学術振興会特別研究員(DC1)を経て、自動車メーカー研究所に就職。現在は農業分野への課題意識から自作の水耕栽培システムを自宅で開発中。自分がこれまでできなかった領域に挑戦したい！</p>
                                     </div>
                                     <div class="card-footer justify-content-center">
                                         <a href="https://twitter.com/KKsippo1" class="btn btn-link btn-just-icon"><i
