--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                                         <small class="card-description text-muted">Technology Desginer</small>
                                     </h4>
                                     <div class="card-body">
-                                        <p class="card-description">ビジョン策定、コア技術開発</p>
+                                        <p class="card-description">ビジョン策定、コア技術開発<br>英国生まれ名古屋育ち。大学時代にプログラミングと出会い…</p>
                                     </div>
                                     <div class="card-footer justify-content-center">
                                         <a href="https://twitter.com/hurasu1" class="btn btn-link btn-just-icon"><i
@@ -307,7 +307,8 @@
                                         <small class="card-description text-muted">Technology Artist</small>
                                     </h4>
                                     <div class="card-body">
-                                        <p class="card-description">デザイン・音楽、ソフトウェア品質管理、知的財産管理</p>
+                                        <p class="card-description">デザイン・音楽、ソフトウェア品質・知的財産管理<br>3歳からピアノをはじめ、14歳でピティナピアノステップ展開3を取得。所属する教室の演奏会では10年連続でとりをつとめる。編曲が趣味で結婚式や演奏会に楽曲を提供。20歳からオーボエもはじめさらに幅を広げる。実はサントリーホールでの演奏経験があったり、日本経済新聞に投書が掲載された実績があったり、発掘やらシステム開発の経験もある幅広レディ。Team-S!PPOでは、アーティスト8、エンジニア2で活動予定！
+                                        </p>
                                     </div>
                                     <div class="card-footer justify-content-center">
                                         <a href="https://twitter.com/MTRunners" class="btn btn-link btn-just-icon"><i
