自己紹介完結

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                                         <small class="card-description text-muted">Technology Desginer</small>
                                     </h4>
                                     <div class="card-body">
-                                        <p class="card-description">ビジョン策定、コア技術開発<br>英国生まれ名古屋育ち。大学時代にプログラミングと出会い…</p>
+                                        <p class="card-description">ビジョン策定、コア技術開発<br>全てはこの男から始まった。Team-S!PPOの創始者。大学ではナノ材料の研究に没頭、有名論文誌に掲載。その傍ら、好奇心旺盛で独学でプログラムを習得。IT企業に研究員として就職し、ウェアラブルデバイスでのヒューマンセンシングやデータサイエンス業務に従事。その後、AIスタートアップへ転職。S!PPOでは、妄想を形にしたい。ITとPhyiscalが融合させて、人が暮らしやすい世界を創りたい。</p>
                                     </div>
                                     <div class="card-footer justify-content-center">
                                         <a href="https://twitter.com/hurasu1" class="btn btn-link btn-just-icon"><i
@@ -285,7 +285,7 @@
                                         <small class="card-description text-muted">Business Developerent Director</small>
                                     </h4>
                                     <div class="card-body">
-                                        <p class="card-description">メカ技術開発、ビジネスモデル策定<br>生まれ(東京)→育ち(名古屋)→大学(東京)→就職(名古屋)と、東京と名古屋を行ったり来たり。父方の実家が農家ということもあってか家庭菜園を愛する幼少期を過ごしました。大学ではエコカーを目指した燃焼計測の研究に従事し、米国留学、学術振興会特別研究員(DC1)を経て、自動車メーカー研究所に就職。現在は農業分野への課題意識から自作の水耕栽培システムを自宅で開発中。自分がこれまでできなかった領域に挑戦したい！</p>
+                                        <p class="card-description">メカ技術開発、ビジネスモデル策定<br>生まれ(東京)→育ち(名古屋)→大学(東京)→就職(名古屋)と、東京と名古屋を行ったり来たり。父方の実家が農家ということもあってか家庭菜園を愛する幼少期を過ごす。大学ではエコカーを目指した燃焼計測の研究に従事し、米国留学、学術振興会特別研究員(DC1)を経て、自動車メーカー研究所に就職。現在は農業分野への課題意識から自作の水耕栽培システムを自宅で開発中。自分がこれまでできなかった領域に挑戦したい！</p>
                                     </div>
                                     <div class="card-footer justify-content-center">
                                         <a href="https://twitter.com/KKsippo1" class="btn btn-link btn-just-icon"> <i
