--- a/index.html
+++ b/index.html
@@ -167,6 +167,8 @@
                 <div class="row">
                     <div class="col-md-8 ml-auto mr-auto">
                         <h5 class="description">
+                                <img src="./assets/images/sippo_logo2.png" alt="Thumbnail Image"
+                                class="img-fluid"><br><br>
                             笑顔のために技術を創りたい、私たちはそんな想いで集った技術者・研究者のチームです。<br><br>
                             効率や便利を追い求めるのではなく、人が現実を密度濃く感じて暮らすことができるような技術、
                             そんな技術を創っていきます。<br><br>
