--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                                     誰でも良い写真を取れます。</p>
                             </div>
                             <div class="col-md-6 ml-auto mr-auto">
-                                <button class="btn btn-danger">comming soon</button>
+                                <a href="https://drive.google.com/open?id=1sww_LS2qCholTnfPFG8gMlOgZrDbwhjR" class="btn btn-danger">android (alpha ver)</a>
                             </div>
     
                         </div>
