--- a/index.html
+++ b/index.html
@@ -198,10 +198,12 @@
                             <h4 class="card-title">cheeeez<br>(フライアブル プロトタイプ)</h4>
                             <div class="card-body">
                                 <p class="card-description">Flyable Serviceの中核の技術を組み入れたカメラアプリのプロトタイプです。
-                                    誰でも良い写真を取れます。</p>
+                                    カメラでB.B.(bot)が好きだと思うものを撮るとハートがでるよ。<br>
+                                    <a href="https://team-sippo.github.io/privacy_policy.html">プライバシーポリシー</a>＆<a href="https://team-sippo.github.io/cheeeez.html">アプリ説明</a>
+                                </p>
                             </div>
                             <div class="col-md-6 ml-auto mr-auto">
-                                <a href="https://drive.google.com/open?id=1sww_LS2qCholTnfPFG8gMlOgZrDbwhjR" class="btn btn-danger">android (alpha ver)</a>
+                                <a href="https://drive.google.com/open?id=1sww_LS2qCholTnfPFG8gMlOgZrDbwhjR" class="btn btn-danger">android (α ver)</a>
                             </div>
     
                         </div>
