--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                                 </p>
                             </div>
                             <div class="col-md-6 ml-auto mr-auto">
-                                <a href="https://drive.google.com/open?id=1sww_LS2qCholTnfPFG8gMlOgZrDbwhjR" class="btn btn-danger">android (α ver)</a>
+                                <a href="https://drive.google.com/open?id=1sww_LS2qCholTnfPFG8gMlOgZrDbwhjR" class="btn btn-danger">android (ALPHA ver)</a>
                             </div>
     
                         </div>
@@ -217,7 +217,7 @@
                             </div>
                             <h4 class="card-title">cYclip<br><br></h4>
                             <div class="card-body">
-                                <p class="card-description">自転車で行きたい場所を探すためのアプリです。</p>
+                                <p class="card-description">自転車で行きたい場所を探すためのアプリです。<br>自転車で行ける距離のレストランを検索できて、そこまでの道順を表示できます。</p>
                             </div>
                             <div class="col-md-6 ml-auto mr-auto">
                                 <a href="https://play.google.com/store/apps/details?id=com.laboratory.kna.cyclip&hl=ja" class="btn btn-danger">android</a>
