--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                                     </h4>
                                     <div class="card-body">
                                         <p class="card-description">コア技術開発、アプリケーション実装<br>
-                                            広島生まれ大阪育ち．高校時代にものづくりの楽しさを知りロボコンやロボカップなどの競技会にのめり込む．大学院でロボットの知能化の研究に従事，IEEE主催の国際会議での受賞歴等あり．博士（工学）．学術振興会特別研究員を経て，現在IT企業の研究所で勤務．直近の2年間は研究開発したヘルステックの欧州での事業化に挑戦．Team-S!PPOでは，全力で楽しみながら，新しいことにチャレンジ！
+                                            TSG2019セミファイナリスト。広島生まれ大阪育ち．高校時代にものづくりの楽しさを知りロボコンやロボカップなどの競技会にのめり込む．大学院でロボットの知能化の研究に従事，IEEE主催の国際会議での受賞歴等あり．博士（工学）．学術振興会特別研究員を経て，現在IT企業の研究所で勤務．直近の2年間は研究開発したヘルステックの欧州での事業化に挑戦．Team-S!PPOでは，全力で楽しみながら，新しいことにチャレンジ！
                                         </p>
                                     </div>
                                     <div class="card-footer justify-content-center">
@@ -311,7 +311,7 @@
                                         <small class="card-description text-muted">Technology Artist</small>
                                     </h4>
                                     <div class="card-body">
-                                        <p class="card-description">デザイン・音楽、ソフトウェア品質・知的財産管理<br>3歳からピアノをはじめ、14歳でピティナピアノステップ展開3を取得。所属する教室の演奏会では10年連続でとりをつとめる。編曲が趣味で結婚式や演奏会に楽曲を提供。20歳からオーボエもはじめさらに幅を広げる。実はサントリーホールでの演奏経験があったり、日本経済新聞に投書が掲載された実績があったり、発掘やらシステム開発の経験もある幅広レディ。Team-S!PPOでは、アーティスト8、エンジニア2で活動予定！
+                                        <p class="card-description">デザイン・音楽、ソフトウェア品質・知的財産管理<br>Team-S!PPOの名付け親。幼少より音楽に触れ、14歳でピティナピアノステップ展開3を取得。所属する教室の演奏会では10年連続でトリをつとめる。作曲編曲が趣味で結婚式や演奏会に楽曲を提供を行う。20歳からはオーボエもはじめさらに幅を広げる。サントリーホールでの演奏経験があったり、日本経済新聞に投書が掲載されたり、遺跡発掘からシステム開発まで古今東西幅広い経験をもつマルチタレント。Team-S!PPOでは、アーティスト8、エンジニア2で右脳活動予定！
                                         </p>
                                     </div>
                                     <div class="card-footer justify-content-center">
