--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                                         <small class="card-description text-muted">Technology Desginer</small>
                                     </h4>
                                     <div class="card-body">
-                                        <p class="card-description">ビジョン策定、コア技術開発<br>全てはこの男から始まった。Team-S!PPOの創始者。大学ではナノ材料の研究に没頭、有名論文誌に掲載。その傍ら、好奇心旺盛で独学でプログラムを習得。IT企業に研究員として就職し、ウェアラブルデバイスでのヒューマンセンシングやデータサイエンス業務に従事。その後、AIスタートアップへ転職。S!PPOでは、妄想を形にしたい。ITとPhyiscalが融合させて、人が暮らしやすい世界を創りたい。</p>
+                                        <p class="card-description">ビジョン策定、コア技術開発<br>全てはこの男から始まった。Team-S!PPOの創始者。大学ではナノ材料の研究に没頭、有名論文誌に掲載。その傍ら、好奇心旺盛で独学でプログラムを習得。IT企業に研究員として就職し、ウェアラブルデバイスでのヒューマンセンシングやデータサイエンス業務に従事。その後、AIスタートアップへ転職。S!PPOでは、妄想を形にしたい。ITとPhysicalが融合させて、人が暮らしやすい世界を創りたい。</p>
                                     </div>
                                     <div class="card-footer justify-content-center">
                                         <a href="https://twitter.com/hurasu1" class="btn btn-link btn-just-icon"><i
