--- a/index.html
+++ b/index.html
@@ -169,6 +169,8 @@
                         <h5 class="description">
                                 <img src="./assets/images/sippo_logo2.png" alt="Thumbnail Image"
                                 class="img-fluid"><br><br>
+                                <img src="./assets/images/sippochan.png" alt="Thumbnail Image"
+                                class="img-fluid"><br><br><br>
                             笑顔のために技術を創りたい、私たちはそんな想いで集った技術者・研究者のチームです。<br><br>
                             効率や便利を追い求めるのではなく、人が現実を密度濃く感じて暮らすことができるような技術、
                             そんな技術を創っていきます。<br><br>
