--- a/index.html
+++ b/index.html
@@ -163,12 +163,31 @@
     <div class="main main-raised">
         <div class="container">
             <div class="section text-center">
+                <h2 div class="title">news </h2>
+                    <a href="https://note.com/team_sippo/n/n0a0b23ac056c">
+                    <button class="btn btn-primary btn-round btn-sm btn-rose">2020.03.25 : note up</button></a><br>
+                    <a href="https://www.youtube.com/watch?v=WrM6UjRXogM">
+                    <button class="btn btn-primary btn-round btn-sm btn-rose">2020.03.25 : youtube up</button></a><br>
+                    <a href="https://www.youtube.com/watch?v=8SuI-7Gmzlk">
+                    <button class="btn btn-primary btn-round btn-sm btn-rose">2020.03.19 : youtube up</button></a><br>
+                    <a href="https://note.com/team_sippo/n/n6ea1fd59f654">
+                    <button class="btn btn-primary btn-round btn-sm btn-rose">2020.03.19 : note up</button></a><br>
+                    <a href="https://note.com/team_sippo/n/n8a9dee83e51c">
+                    <button class="btn btn-primary btn-round btn-sm btn-rose">2020.03.15 : note up</button></a><br>
+                    <a href="https://note.com/team_sippo/n/n1cee4c3db319">
+                    <button class="btn btn-primary btn-round btn-sm btn-rose">2020.03.14 : note up</button></a><br>
+                    <a href="https://note.com/team_sippo/n/n5fed01d0c209">
+                    <button class="btn btn-primary btn-round btn-sm btn-rose">2020.03.11 : note up</button></a><br>
+                </div>
+        
+            </div>
+            <div class="section text-center">
                 <h2 class="title">About Us</h2>
                 <div class="row">
                     <div class="col-md-8 ml-auto mr-auto">
-                        <h5 class="description">
+                        <h5 class="description"><br><br><br>
                                 <img src="./assets/images/sippo_logo2.png" alt="Thumbnail Image"
-                                class="img-fluid"><br><br>
+                                class="img-fluid"><br><br><br><br><br>
                                 <img src="./assets/images/sippochan.png" alt="Thumbnail Image"
                                 class="img-fluid"><br><br><br>
                             笑顔のために技術を創りたい、私たちはそんな想いで集った技術者・研究者のチームです。<br><br>
@@ -353,7 +372,7 @@
                         <div class="row">
                             <div class="col-md-8 ml-auto mr-auto text-center">
                                 <h5 class="description">ご感想などありましたら、ご連絡下さい。</h5>
-                                <a href="https://forms.gle/DknXk1j6go5UsXjQA" class="btn btn-danger btn-raised">
+                                <a href="https://forms.gle/DknXk1j6go5UsXjQA" class="btn btn-rose btn-raised">
                                     contact us
                                 </a>
                             </div>
