--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
             </div>
 
 
-            <h2 class="title">Event</h2>
+            <h2 class="title" id="event">Event</h2>
             <div class="team">
                 <div class="row">
                     <!--TAN2 intoroduction-->
