--- a/index.html
+++ b/index.html
@@ -61,26 +61,20 @@
         id="sectionsNav">
         <div class="container">
             <div class="navbar-translate">
-
                 <a class="navbar-brand" rel="tooltip" title="" data-placement="bottom"
-                href="#About-us" target="_blank"
-                data-original-title="Team-S!PPOとは">Team-S!PPO
+                href="#About-us" data-original-title="Team-S!PPOとは">Team-S!PPO
                 </a>
                 <a class="navbar-brand" rel="tooltip" title="" data-placement="bottom"
-                href="#news" target="_blank"
-                data-original-title="最新情報">News
+                href="#news" data-original-title="最新情報">News
                 </a>
                 <a class="navbar-brand" rel="tooltip" title="" data-placement="bottom"
-                href="#products" target="_blank"
-                data-original-title="リリース済みプロダクト">Products
+                href="#products" target="_blank" data-original-title="リリース済みプロダクト">Products
                 </a>
                 <a class="navbar-brand" rel="tooltip" title="" data-placement="bottom"
-                href="#our-team" target="_blank"
-                data-original-title="チームメンバ紹介">OurTeam
+                href="#our-team" target="_blank" data-original-title="チームメンバ紹介">OurTeam
                 </a>
                 <a class="navbar-brand" rel="tooltip" title="" data-placement="bottom"
-                href="#event" target="_blank"
-                data-original-title="定期・不定期開催イベント">Event
+                href="#event" data-original-title="定期・不定期開催イベント">Event
                 </a>
                 <a class="navbar-brand" rel="tooltip" title="" data-placement="bottom"
                 href="https://forms.gle/DknXk1j6go5UsXjQA" target="_blank"
