--- a/index.html
+++ b/index.html
@@ -119,25 +119,24 @@
         </div>
     </nav>
 
-    <div class="page-header header-filter" data-parallax="true"
-        style="background-image: url('assets/images/pv.gif')">
+
+    <div class="page-header header-filter clear-filter" data-parallax="true"
+        style="background-image: url('assets/images/sippochan.jpg')">
         <div class="container">
             <div class="row">
-                <div class="col-md-8 ml-auto mr-auto">
+                <div class="col-md-8 ml-1">
                     <div class="brand text-center">
-                        <h1>Flyable Service</h1>
-                        <a onclick="ga('send', 'event', 'click_link', 'click', 'youtube_flyable');" href="https://www.youtube.com/watch?v=VnRiD0piabc" target="_blank" class="btn btn-danger btn-raised btn">
+                        <h2>しっぽにちは！<br>しっぽちゃんです。</h2>
+                        <!--a onclick="ga('send', 'event', 'click_link', 'click', 'youtube_flyable');" href="https://www.youtube.com/watch?v=VnRiD0piabc" target="_blank" class="btn btn-danger btn-raised btn">
                             <i class="fa fa-play"></i> Vision video
-                        </a>
-                        <h3 class="title text-center">produced by Team-S!PPO</h3>
+                        </a-->
+                        <h4 class="title text-center">技術者・研究者のチーム<br>「Team-S!PPO」の部屋へようこそ。<br>このページはTeam-S!PPOの活動記録やメディア、<br>コードやプロダクト、イベントなどの情報に<br>アクセスできるポータルサイトです。</h3>
+                        <h6 class="title text-center">技術であなたを笑顔に<br>-Technologies for your smile-</h6>
                     </div>
                 </div>    
             </div>
-            </div>
         </div>
     </div>
-
-
 
 
     <div class="main main-raised">
@@ -145,7 +144,7 @@
             <div class="section text-center" id="news">
                 <h2 div class="title">news </h2>
                     <a href="https://note.com/team_sippo/n/n0a0b23ac056c">
-                    <button class="btn btn-primary btn-round btn-sm btn-rose">2020.03.25 : note up</button></a><br>
+                    <button class="btn bt㊅n-primary btn-round btn-sm btn-rose">2020.03.25 : note up</button></a><br>
                     <a href="https://www.youtube.com/watch?v=WrM6UjRXogM">
                     <button class="btn btn-primary btn-round btn-sm btn-rose">2020.03.25 : youtube up</button></a><br>
                     <a href="https://www.youtube.com/watch?v=8SuI-7Gmzlk">
@@ -168,8 +167,6 @@
                         <h5 class="description"><br><br><br>
                                 <img src="./assets/images/sippo_logo2.png" alt="Thumbnail Image"
                                 class="img-fluid"><br><br><br><br><br>
-                                <img src="./assets/images/sippochan.png" alt="Thumbnail Image"
-                                class="img-fluid"><br><br><br>
                             笑顔のために技術を創りたい、私たちはそんな想いで集った技術者・研究者のチームです。<br><br>
                             効率や便利を追い求めるのではなく、人が現実を密度濃く感じて暮らすことができるような技術、
                             そんな技術を創っていきます。<br><br>
