--- a/index.html
+++ b/index.html
@@ -57,59 +57,68 @@
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NHCGRMB" height="0" width="0"
             style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
-    <nav class="navbar navbar-transparent navbar-color-on-scroll fixed-top navbar-expand-lg" color-on-scroll="100"
+    <nav class="index-page sidebar-collapse navbar navbar-transparent navbar-color-on-scroll fixed-top navbar-expand-lg" color-on-scroll="100"
         id="sectionsNav">
         <div class="container">
             <div class="navbar-translate">
-                <a class="navbar-brand" rel="tooltip" title="" data-placement="bottom"
-                href="#About-us" data-original-title="Team-S!PPOとは">Team-S!PPO
-                </a>
-                <a class="navbar-brand" rel="tooltip" title="" data-placement="bottom"
-                href="#news" data-original-title="最新情報">News
-                </a>
-                <a class="navbar-brand" rel="tooltip" title="" data-placement="bottom"
-                href="#products" target="_blank" data-original-title="リリース済みプロダクト">Products
-                </a>
-                <a class="navbar-brand" rel="tooltip" title="" data-placement="bottom"
-                href="#our-team" target="_blank" data-original-title="チームメンバ紹介">OurTeam
-                </a>
-                <a class="navbar-brand" rel="tooltip" title="" data-placement="bottom"
-                href="#event" data-original-title="定期・不定期開催イベント">Event
-                </a>
-                <a class="navbar-brand" rel="tooltip" title="" data-placement="bottom"
-                href="https://forms.gle/DknXk1j6go5UsXjQA" target="_blank"
-                data-original-title="連絡はこちらから">ContactUs
-                </a>
-
                 <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="navbar-toggler-icon"></span>
                     <span class="navbar-toggler-icon"></span>
                     <span class="navbar-toggler-icon"></span>
-
-                  </button>
-                </div>
+                </button>
+            </div>
+            
                 <div class="collapse navbar-collapse">
-                  <ul class="navbar-nav ml-auto">
-                    <li class="dropdown nav-item">
+                  <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" rel="tooltip" rel=”noopener” title="" target="_blank" data-placement="bottom"
+                        href="#About-us" data-original-title="Team-S!PPOとは">Team-S!PPO
+                        </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="https://www.youtube.com/user/korokoror" target="_blank" data-original-title="Follow us on YouTube">
+                        <a class="nav-link" rel="tooltip" rel=”noopener” title="" target="_blank" data-placement="bottom"
+                            href="#news" data-original-title="最新情報">News
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" rel="tooltip" rel=”noopener” title="" target="_blank" data-placement="bottom"
+                        href="#products" data-original-title="リリース済みプロダクト">Products
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" rel="tooltip" rel=”noopener” title="" target="_blank" data-placement="bottom"
+                        href="#our-team" data-original-title="チームメンバ紹介">OurTeam
+                        </a>                        
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" rel="tooltip" rel=”noopener” title="" target="_blank" data-placement="bottom"
+                        href="#event" data-original-title="定期・不定期開催イベント">Event
+                        </a>                        
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" rel="tooltip" rel=”noopener” title="" target="_blank" data-placement="bottom"
+                        href="https://forms.gle/DknXk1j6go5UsXjQA"
+                        data-original-title="連絡はこちらから">ContactUs
+                        </a>                        
+                    </li>                                        
+                    <li class="nav-item">
+                        <a class="nav-link" rel="tooltip" rel=”noopener” title="" data-placement="bottom" href="https://www.youtube.com/user/korokoror" target="_blank" data-original-title="Follow us on YouTube">
                         <i class="fa fa-play"></i> YOUTUBE
                       </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="https://note.com/team_sippo/m/m8700090081c2" target="_blank" data-original-title="Our Code on Git-Hub">
+                        <a class="nav-link" rel="tooltip" rel=”noopener” title="" data-placement="bottom" href="https://note.com/team_sippo/m/m8700090081c2" target="_blank" data-original-title="Our Code on Git-Hub">
                           <i class="fa fa-sticky-note"></i>Note
                         </a>
                       </li>
                     <li class="nav-item">
-                      <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="https://github.com/Team-SIPPO/" target="_blank" data-original-title="Our Code on Git-Hub">
+                      <a class="nav-link" rel="tooltip" rel=”noopener” title="" data-placement="bottom" href="https://github.com/Team-SIPPO/" target="_blank" data-original-title="Our Code on Git-Hub">
                         <i class="fa fa-code"></i>code
                       </a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="https://www.instagram.com/team.sippo/" target="_blank" data-original-title="Follow us on Instagram">
+                      <a class="nav-link" rel="tooltip" rel=”noopener” title="" data-placement="bottom" href="https://www.instagram.com/team.sippo/" target="_blank" data-original-title="Follow us on Instagram">
                         <i class="fa fa-instagram"></i>instagram
                       </a>
                     </li>
