--- a/index.html
+++ b/index.html
@@ -135,11 +135,11 @@
             <div class="row">
                 <div class="col-md-8 ml-1">
                     <div class="brand text-center">
-                        <h2>しっぽにちは！<br>しっぽちゃんです。</h2>
+                        <h2>しっぽにちは！<br>しっぽちゃんです</h2>
                         <!--a onclick="ga('send', 'event', 'click_link', 'click', 'youtube_flyable');" href="https://www.youtube.com/watch?v=VnRiD0piabc" target="_blank" class="btn btn-danger btn-raised btn">
                             <i class="fa fa-play"></i> Vision video
                         </a-->
-                        <h4 class="title text-center">技術者・研究者のチーム<br>「Team-S!PPO」の部屋へようこそ。<br>このページはTeam-S!PPOの活動記録やメディア、<br>コードやプロダクト、イベントなどの情報に<br>アクセスできるポータルサイトです。</h3>
+                        <h4 class="title text-center">技術者・研究者のチーム<br>「Team-S!PPO」です<br><br>このページはTeam-S!PPOの<br>メディア<br>コード<br>プロダクト<br>イベント<br>などの情報にアクセスできる<br>ポータルサイトです</h3>
                         <h6 class="title text-center">技術であなたを笑顔に<br>-Technologies for your smile-</h6>
                     </div>
                 </div>    
