--- a/index.html
+++ b/index.html
@@ -72,27 +72,27 @@
                 <div class="collapse navbar-collapse">
                   <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" rel="tooltip" rel=”noopener” title="" target="_blank" data-placement="bottom"
+                        <a class="nav-link" rel="tooltip" rel=”noopener” title="" data-placement="bottom"
                         href="#About-us" data-original-title="Team-S!PPOとは">Team-S!PPO
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" rel="tooltip" rel=”noopener” title="" target="_blank" data-placement="bottom"
+                        <a class="nav-link" rel="tooltip" rel=”noopener” title="" data-placement="bottom"
                             href="#news" data-original-title="最新情報">News
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" rel="tooltip" rel=”noopener” title="" target="_blank" data-placement="bottom"
+                        <a class="nav-link" rel="tooltip" rel=”noopener” title="" data-placement="bottom"
                         href="#products" data-original-title="リリース済みプロダクト">Products
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" rel="tooltip" rel=”noopener” title="" target="_blank" data-placement="bottom"
+                        <a class="nav-link" rel="tooltip" rel=”noopener” title="" data-placement="bottom"
                         href="#our-team" data-original-title="チームメンバ紹介">OurTeam
                         </a>                        
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" rel="tooltip" rel=”noopener” title="" target="_blank" data-placement="bottom"
+                        <a class="nav-link" rel="tooltip" rel=”noopener” title="" data-placement="bottom"
                         href="#event" data-original-title="定期・不定期開催イベント">Event
                         </a>                        
                     </li>
@@ -154,17 +154,17 @@
                 <h2 div class="title">news </h2>
                     <a href="https://note.com/team_sippo/n/n0a0b23ac056c">
                     <button class="btn bt㊅n-primary btn-round btn-sm btn-rose">2020.03.25 : note up</button></a><br>
-                    <a href="https://www.youtube.com/watch?v=WrM6UjRXogM">
+                    <a href="https://www.youtube.com/watch?v=WrM6UjRXogM" target="_blank"  rel=”noopener”>
                     <button class="btn btn-primary btn-round btn-sm btn-rose">2020.03.25 : youtube up</button></a><br>
-                    <a href="https://www.youtube.com/watch?v=8SuI-7Gmzlk">
+                    <a href="https://www.youtube.com/watch?v=8SuI-7Gmzlk" target="_blank"  rel=”noopener”>
                     <button class="btn btn-primary btn-round btn-sm btn-rose">2020.03.19 : youtube up</button></a><br>
-                    <a href="https://note.com/team_sippo/n/n6ea1fd59f654">
+                    <a href="https://note.com/team_sippo/n/n6ea1fd59f654" target="_blank"  rel=”noopener”>
                     <button class="btn btn-primary btn-round btn-sm btn-rose">2020.03.19 : note up</button></a><br>
-                    <a href="https://note.com/team_sippo/n/n8a9dee83e51c">
+                    <a href="https://note.com/team_sippo/n/n8a9dee83e51c" target="_blank"  rel=”noopener”>
                     <button class="btn btn-primary btn-round btn-sm btn-rose">2020.03.15 : note up</button></a><br>
-                    <a href="https://note.com/team_sippo/n/n1cee4c3db319">
+                    <a href="https://note.com/team_sippo/n/n1cee4c3db319" target="_blank"  rel=”noopener”>
                     <button class="btn btn-primary btn-round btn-sm btn-rose">2020.03.14 : note up</button></a><br>
-                    <a href="https://note.com/team_sippo/n/n5fed01d0c209">
+                    <a href="https://note.com/team_sippo/n/n5fed01d0c209" target="_blank"  rel=”noopener”>
                     <button class="btn btn-primary btn-round btn-sm btn-rose">2020.03.11 : note up</button></a><br>
                 </div>
         
@@ -413,7 +413,7 @@
                         <div class="row">
                             <div class="col-md-8 ml-auto mr-auto text-center">
                                 <h5 class="description">定例会参加希望、ご感想などありましたら、ご連絡下さい。</h5>
-                                <a href="https://forms.gle/DknXk1j6go5UsXjQA" class="btn btn-rose btn-raised">
+                                <a href="https://forms.gle/DknXk1j6go5UsXjQA" class="btn btn-rose btn-raised" target="_blank" rel=”noopener”>
                                     contact us
                                 </a>
                             </div>
@@ -449,7 +449,7 @@
                 <script>
                     document.write(new Date().getFullYear())
                 </script>, made with <i class="material-icons">favorite</i> by
-                <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a> for a better web.
+                <a href="https://www.creative-tim.com" target="_blank" rel=”noopener”>Creative Tim</a> for a better web.
             </div>
         </div>
     </footer>
